@@ -1,10 +1,11 @@
 * Version 1.0.19-stable
- - Building with `zig build` now works both with Zig 0.11 and Zig 0.12.
+ - Building with `zig build` now requires Zig 0.12.
  - When using the traditional build system, -O3 is used instead of -Ofast.
  - Improved detection of the compiler flags required on aarch64.
  - Improved compatibility with custom build systems on aarch64.
  - apple-xcframework: VisionOS packages are not built if Xcode doesn't
 include that SDK.
+ - `crypto_kdf_hkdf_sha512_statebytes()` was added.
 
 * Version 1.0.19
   This release includes all the changes from 1.0.18-stable, as well as two
